--- a/AssignGithub/form.html
+++ b/AssignGithub/form.html
@@ -166,12 +166,12 @@
                    src="message.jpg">
                 </div>      
                 <div class="dropline">
-                     <span class="drop">'Drop us a Line.'<span>  
+                     <span class="drop">'Drop US a Line'<span>  
                 </div>
             </div>
                 
             <div id="form" class="item4_2">
-                <h2 class="enquiry">Product Enquiry Form</h2>
+                <h2 class="enquiry">Limited Products on Offer</h2>
                 <div class ="containerform">
                     <form action="action_page.php">
                         <label for="fullname">Full Name</label>
